--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
-    xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/plantilla :: head">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+    <head th:replace="~{layout/plantilla :: head}">
+        <title>TechShop</title>        
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header" />
-        <section th:replace="categoria/fragmentos :: botonesAgregar"></section>
-        <section th:replace="categoria/fragmentos :: agregarCategoria"></section>
-        <section th:replace="categoria/fragmentos :: listadoCategorias"></section>
-        <footer th: replace="layout/plantilla :: footer" />
+        <header th:replace="~{layout/plantilla :: header}"/>
+        <section th:replace="~{carrito/fragmentos :: listadoProductos}"/>
+        <footer th:replace="~{layout/plantilla :: footer}"/>          
     </body>
 </html>
